Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10094

sanity test_17f: 'ls' fails with "ls: reading directory *: Input/output error"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.13.0, Lustre 2.12.3
    • Lustre 2.11.0, Lustre 2.12.0, Lustre 2.13.0, Lustre 2.10.7, Lustre 2.12.1
    • trevis, full, x86_64 servers, ppc clients
      servers: el7.4, ldiskfs, branch master, v2.10.53.1, b3642
      clients: el7.4, branch master, v2.10.53.1, b3642
    • 3
    • 9223372036854775807

      https://testing.whamcloud.com/test_sessions/ba995751-659c-4e63-9b5b-fbf101137b78

      From test_log:

      ls: reading directory /mnt/lustre/d17f.sanity: Input/output error
       sanity test_17f: @@@@@@ FAIL: test_17f failed with 2 
        Trace dump:
        = /usr/lib64/lustre/tests/test-framework.sh:5289:error()
        = /usr/lib64/lustre/tests/test-framework.sh:5565:run_one()
        = /usr/lib64/lustre/tests/test-framework.sh:5604:run_one_logged()
        = /usr/lib64/lustre/tests/test-framework.sh:5451:run_test()
        = /usr/lib64/lustre/tests/sanity.sh:459:main()
      

            laisiyao Lai Siyao
            jcasper James Casper (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: